Bug 1559302 - Make select options visible on the in-content dark theme. r=dao
Differential Revision: https://phabricator.services.mozilla.com/D37339

UltraBlame original commit: 18681e46c283129f5abdab6a5eee4386dc35a91a

--- a/toolkit/themes/shared/in-content/common.inc.css
+++ b/toolkit/themes/shared/in-content/common.inc.css
@@ -2938,6 +2938,61 @@ center
 }
 html
 |
+select
+:
+not
+(
+[
+size
+]
+)
+:
+not
+(
+[
+multiple
+]
+)
+>
+html
+|
+option
+{
+background
+-
+color
+:
+var
+(
+-
+-
+in
+-
+content
+-
+box
+-
+background
+)
+;
+color
+:
+var
+(
+-
+-
+in
+-
+content
+-
+text
+-
+color
+)
+;
+}
+html
+|
 button
 :
 enabled
